add swagger for get by id
